FIX: Header Logo Width on Mobile Device

--- a/css/header.css
+++ b/css/header.css
@@ -48,7 +48,7 @@
 
 @media screen and (max-width: 912px) {
   .header-logo-scrolled {
-    max-width: 130px;
+    max-width: 100px;
   }
 }
 
